--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -75,6 +75,10 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # default project node selector
 #osm_default_node_selector='region=primary'
 
+# default storage plugin dependencies to install, by default the ceph and
+# glusterfs plugin dependencies will be installed, if available.
+#osn_storage_plugin_deps=['ceph','glusterfs']
+
 # default selectors for router and registry services
 # openshift_router_selector='region=infra'
 # openshift_registry_selector='region=infra'
