Support for logging and metrics endpoints
- Adds support for setting metricsPublicURL and loggingPublicURL
  - Default metricsPublicURL is https://{{ openshift_public_hostname }}:8443/metrics
  - Default loggingPublicURL is https://{{ openshift_public_hostname }}:8443/logging
  - openshift_master_console_use_ssl and openshift_master_console_port will
    override the connection type and port used by the metrics and logging endpoints.
  - openshift_master_{metrics,logging}_path will change the path for the respective endpoints
  - openshift_master_cluster_hostname will override openshift_public_hostname if provided
  - specifying openshift_master_public_{metrics,logging}_url will override any
    of the above settings and/or defaults

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -29,6 +29,10 @@
       console_url: "{{ openshift_master_console_url | default(None) }}"
       console_use_ssl: "{{ openshift_master_console_use_ssl | default(None) }}"
       public_console_url: "{{ openshift_master_public_console_url | default(None) }}"
+      metrics_path: "{{ openshift_master_metrics_path | default(None) }}"
+      public_metrics_url: "{{ openshift_master_public_metrics_url | default(None) }}"
+      logging_path: "{{ openshift_master_logging_path | default(None) }}"
+      public_logging_url: "{{ openshift_master_public_logging_url | default(None) }}"
       etcd_hosts: "{{ openshift_master_etcd_hosts | default(None)}}"
       etcd_port: "{{ openshift_master_etcd_port | default(None) }}"
       etcd_use_ssl: "{{ openshift_master_etcd_use_ssl | default(None) }}"
