--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -129,6 +129,9 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # characters long, to select AES-128, AES-192, or AES-256.
 #openshift_master_session_encryption_secrets=['DONT+USE+THIS+SECRET+b4NV+pmZNSO']
 
+# configure how often node iptables rules are refreshed
+#openshift_node_iptables_sync_period=5s
+
 # host group for masters
 [masters]
 ose3-master[1:3]-ansible.test.example.com
