--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -79,6 +79,12 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # openshift_router_selector='region=infra'
 # openshift_registry_selector='region=infra'
 
+# Configure the multi-tenant SDN plugin (default is 'redhat/openshift-ovs-subnet')
+# os_sdn_network_plugin_name='redhat/openshift-ovs-multitenant'
+
+# Disable the OpenShift SDN plugin
+# openshift_use_openshift_sdn=False
+
 # set RPM version for debugging purposes
 #openshift_pkg_version=-3.0.0.0
 
