--- a/roles/flannel_register/defaults/main.yaml
+++ b/roles/flannel_register/defaults/main.yaml
@@ -1,7 +1,7 @@
 ---
-flannel_network: "{{ openshift.master.portal_net | default('172.16.1.1/16', true) }}"
-flannel_min_network: "{{ min_network | default('172.16.5.0', true) }}"
-flannel_subnet_len: "{{ subnet_len | default(24, true) }}"
+flannel_network: "{{ openshift.master.portal_net | default('172.30.0.0/16', true) }}"
+flannel_min_network: 172.30.5.0
+flannel_subnet_len: 24
 flannel_etcd_key: /openshift.com/network
 etcd_hosts: "{{ etcd_urls }}"
 etcd_conf_dir: "{{ openshift.common.config_base }}/master"
