--- a/playbooks/adhoc/upgrades/upgrade.yml
+++ b/playbooks/adhoc/upgrades/upgrade.yml
@@ -14,25 +14,26 @@
   roles:
   - openshift_facts
   tasks:
-  - name: display all variables set for the current host
-    debug:
-      var: hostvars[inventory_hostname]
-  - debug: var=embedded_etcd
-  - name: Check available data dir disk space
+  - debug: var=etcd_data_dir
+  - name: Check available disk space for etcd backup
+    # We assume to be using the data dir for all backups.
     shell: >
       df --output=avail -k {{ openshift.common.data_dir }} | tail -n 1
     register: avail_disk
-    when: embedded_etcd | bool
-  - debug: var=avail_disk.stdout
-  - name: Check current etcd disk usage
+
+  - name: Check current embedded etcd disk usage
     shell: >
-      du -k {{ openshift.common.data_dir }}/openshift.local.etcd | tail -n 1 | cut -f1
-    register: etc_disk_usage
+      du -k {{ openshift.master.etcd_data_dir }} | tail -n 1 | cut -f1
+    register: etcd_disk_usage
     when: embedded_etcd | bool
-  - debug: var=etc_disk_usage.stdout
+
   - name: Abort if insufficient disk space for etcd backup
-    fail: msg="{{ etc_disk_usage.stdout }} Kb disk space required for etcd backup, {{ avail_disk.stdout }} Kb available."
-    when: (embedded_etcd | bool) and (etc_disk_usage.stdout|int > avail_disk.stdout|int)
+    fail: msg="{{ etcd_disk_usage.stdout }} Kb disk space required for etcd backup, {{ avail_disk.stdout }} Kb available."
+    when: (embedded_etcd | bool) and (etcd_disk_usage.stdout|int > avail_disk.stdout|int)
+  - name: Install etcd (for etcdctl)
+    yum: pkg=etcd state=latest
+  - name: Generate etcd backup
+    command: etcdctl backup
   - fail: msg="All done for now."
 
 - name: Re-Run cluster configuration to apply latest configuration changes
