Moving to Openshift Etcd application

--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -35,73 +35,73 @@ g_template_openshift_master:
     description: Show number of successful create actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.create.fail
     description: Show number of failed create actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.delete.success
     description: Show number of successful delete actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.delete.fail
     description: Show number of failed delete actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.get.success
     description: Show number of successful get actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.get.fail
     description: Show number of failed get actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.set.success
     description: Show number of successful set actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.set.fail
     description: Show number of failed set actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.update.success
     description: Show number of successful update actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.update.fail
     description: Show number of failed update actions
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.watchers
     description: Show number of etcd watchers
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   - key: openshift.master.etcd.ping
     description: etcd ping
     type: int
     applications:
-    - Openshift Master
+    - Openshift Etcd
 
   ztriggers:
   - name: 'Application creation has failed on {HOST.NAME}'
