--- a/roles/openshift_master_certificates/tasks/main.yml
+++ b/roles/openshift_master_certificates/tasks/main.yml
@@ -34,7 +34,7 @@
     - serviceaccounts.private.key
     - serviceaccounts.public.key
 
-- debug: msg="{{ item.openshift.master.all_hostnames | join (',') }}"
+- debug: msg="{{ item.openshift.common.all_hostnames | join (',') }}"
   with_items: masters_needing_certs
 
 - name: Create the master certificates if they do not already exist
